Fix about deco overflow

--- a/src/sass/modules/_about.scss
+++ b/src/sass/modules/_about.scss
@@ -8,7 +8,6 @@
 
     // visual
     background-color: $white;
-    overflow: hidden;
 
     @include atTabletsPortrait {
         // box model
@@ -19,26 +18,6 @@
         // box model
         padding: 20px 120px;
     }
-
-    // &::before {
-    //     content: "";
-        
-    //     // positioning
-    //     position: absolute;
-    //     left: 0;
-    //     top: -20px;
-    //     z-index: 6;
-        
-    //     // box model
-    //     height: 32px;
-    //     width: 100%;
-        
-    //     // visual
-    //     background-image: url("./img/deco-b.svg");
-    //     background-size: 80px;
-    //     background-repeat: repeat-x;
-    //     background-position: top center;
-    // }
     
     &--yellow {
         // positioning
@@ -299,6 +278,7 @@
         position: absolute;
         top: 150px;
         right: -150px;
+        right: 60px;
         z-index: 1;
 
         // box model
